crates/piccle-validate/tests/snapshots/snapshots__page.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Page",
    ),
    description: Some(
        "A papery flick with a tiny glass tick — for pages and galleries.",
    ),
    duration_ms: 120,
    master_volume_level: 1.0,
    reverb: None,
    layers: [
        Layer {
            id: "flick",
            start_ms: 0,
            duration_ms: 80,
            source: Noise(
                NoiseSource {
                    character: Soft,
                    seed: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 1,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 15,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 10,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.03,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [
                Filter {
                    filter_type: Highpass,
                    frequencies: [
                        ContourEntry {
                            target: 600.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    resonance: 0.0,
                },
            ],
        },
        Layer {
            id: "rustle",
            start_ms: 20,
            duration_ms: 100,
            source: Noise(
                NoiseSource {
                    character: Neutral,
                    seed: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 5,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 20,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.25,
                        hold_ms: 0,
                        transition_ms: 20,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.02,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [
                Filter {
                    filter_type: Lowpass,
                    frequencies: [
                        ContourEntry {
                            target: 3000.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    resonance: 0.0,
                },
            ],
        },
        Layer {
            id: "tick",
            start_ms: 50,
            duration_ms: 60,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 2000.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 1,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 15,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.35,
                        hold_ms: 0,
                        transition_ms: 8,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.03,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
    ],
}
