crates/piccle-validate/tests/snapshots/snapshots__pitch-frequencies-entry-missing-hz.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.required $.layers[0].source.pitch.frequencies[0].hz
