crates/piccle-validate/tests/snapshots/snapshots__pitch-timing-exceeds-duration.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
semantic semantic.pitch_timing_exceeds_duration $.layers[0].source.pitch.frequencies
