crates/piccle-validate/tests/snapshots/snapshots__ready.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Ready",
    ),
    description: Some(
        "A crisp tick opening into two soft harmonic tones — content is ready.",
    ),
    duration_ms: 380,
    master_volume_level: 1.0,
    spatial_effects: [
        Reverb(
            Reverb {
                amount: 0.2,
                tail_ms: 300,
                soften_hz: 4500.0,
            },
        ),
    ],
    layers: [
        Layer {
            id: "tick",
            start_ms: 0,
            duration_ms: 50,
            source: Noise(
                NoiseSource {
                    character: Neutral,
                    seed: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 0,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 5,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [
                Filter {
                    filter_type: Bandpass,
                    frequencies: [
                        ContourEntry {
                            target: 2500.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    resonance: 0.4,
                },
            ],
        },
        Layer {
            id: "tone-high",
            start_ms: 30,
            duration_ms: 350,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 880.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 5,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 80,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.4,
                        hold_ms: 0,
                        transition_ms: 50,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.05,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
        Layer {
            id: "tone-low",
            start_ms: 30,
            duration_ms: 350,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 660.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 5,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 80,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.3,
                        hold_ms: 0,
                        transition_ms: 50,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.04,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
    ],
}
