crates/piccle-validate/tests/snapshots/snapshots__resonance-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.maximum $.layers[0].filters[0].resonance
