crates/piccle-validate/tests/snapshots/snapshots__reverb-amount-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.maximum $.reverb.amount
