crates/piccle-validate/tests/snapshots/snapshots__reverb-missing-field.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.required $.reverb.amount
