crates/piccle-validate/tests/snapshots/snapshots__reverb-soften-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.minimum $.reverb.soften_hz
