crates/piccle-validate/tests/snapshots/snapshots__root-duration-zero.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.minimum $.duration_ms
