crates/piccle-validate/tests/snapshots/snapshots__root-fade-in-removed.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.additionalProperties $.fade_in_ms
