crates/piccle-validate/tests/snapshots/snapshots__root-fade-out-removed.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.additionalProperties $.fade_out_ms
